--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@adonisjs/framework": "^5.0.9",
     "@adonisjs/ignitor": "^2.0.8",
     "@adonisjs/lucid": "^6.1.3",
+    "@adonisjs/vow": "^1.0.17",
     "node-sass": "^4.14.1",
     "typescript": "^4.0.2"
   },
