--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@adonisjs/ace": "^5.0.8",
     "@adonisjs/auth": "^3.0.7",
     "@adonisjs/bodyparser": "^2.0.5",
+    "@adonisjs/cli": "^4.0.12",
     "@adonisjs/cors": "^1.0.7",
     "@adonisjs/fold": "^4.0.9",
     "@adonisjs/framework": "^5.0.9",
@@ -26,7 +27,8 @@
     "@adonisjs/lucid": "^6.1.3",
     "@adonisjs/vow": "^1.0.17",
     "node-sass": "^4.14.1",
-    "typescript": "^4.0.2"
+    "typescript": "^4.0.2",
+    "yarn": "^1.22.5"
   },
   "devDependencies": {},
   "autoload": {
