--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "@adonisjs/framework": "^5.0.9",
     "@adonisjs/ignitor": "^2.0.8",
     "@adonisjs/lucid": "^6.1.3",
+    "@adonisjs/validator": "^5.0.6",
     "@adonisjs/vow": "^1.0.17",
     "mysql": "^2.18.1",
     "node-sass": "^4.14.1",
