--- a/package.json
+++ b/package.json
@@ -27,12 +27,14 @@
     "@adonisjs/lucid": "^6.1.3",
     "@adonisjs/validator": "^5.0.6",
     "@adonisjs/vow": "^1.0.17",
+    "cron": "^1.8.2",
     "mysql": "^2.18.1",
-    "node-sass": "^4.14.1",
-    "typescript": "^4.0.2",
     "yarn": "^1.22.5"
   },
-  "devDependencies": {},
+  "devDependencies": {
+    "node-sass": "^4.14.1",
+    "typescript": "^4.0.2"
+  },
   "autoload": {
     "App": "./app"
   }
