--- a/package.json
+++ b/package.json
@@ -28,11 +28,13 @@
     "@adonisjs/lucid": "^6.1.3",
     "@adonisjs/validator": "^5.0.6",
     "@adonisjs/vow": "^1.0.17",
+    "@adonisjs/websocket": "^1.0.12",
     "aws-sdk": "^2.751.0",
     "cron": "^1.8.2",
     "ms": "^2.1.2",
     "mysql": "^2.18.1",
     "node-fetch": "^2.6.1",
+    "uuid": "^8.3.0",
     "yarn": "^1.22.5"
   },
   "devDependencies": {
