--- a/package.json
+++ b/package.json
@@ -31,17 +31,19 @@
     "@adonisjs/websocket": "^1.0.12",
     "aws-sdk": "^2.751.0",
     "cron": "^1.8.2",
+    "cron-job-manager": "^2.1.4",
+    "eslint": "^7.10.0",
     "ms": "^2.1.2",
     "mysql": "^2.18.1",
     "node-fetch": "^2.6.1",
     "uuid": "^8.3.0",
     "yarn": "^1.22.5"
   },
-  "devDependencies": {
-    "node-sass": "^4.14.1",
-    "typescript": "^4.0.2"
-  },
   "autoload": {
     "App": "./app"
+  },
+  "devDependencies": {
+    "prettier": "^2.1.2",
+    "prettier-config-standard": "^1.0.1"
   }
 }
