Added eslintrc and refactored code according to eslint.

--- a/package.json
+++ b/package.json
@@ -44,6 +44,9 @@
   },
   "devDependencies": {
     "prettier": "^2.1.2",
-    "prettier-config-standard": "^1.0.1"
+    "prettier-config-standard": "^1.0.1",
+    "eslint": "^4.19.1",
+    "eslint-config-airbnb-base": "^12.1.0",
+    "eslint-plugin-import": "^2.9.0"
   }
 }
