--- a/package.json
+++ b/package.json
@@ -32,12 +32,10 @@
     "aws-sdk": "^2.751.0",
     "cron": "^1.8.2",
     "cron-job-manager": "^2.1.4",
-    "eslint": "^7.10.0",
+    "eslint": "^7.11.0",
     "ms": "^2.1.2",
     "mysql": "^2.18.1",
-    "node-fetch": "^2.6.1",
-    "uuid": "^8.3.0",
-    "yarn": "^1.22.5"
+    "uuid": "^8.3.0"
   },
   "autoload": {
     "App": "./app"
@@ -45,7 +43,6 @@
   "devDependencies": {
     "prettier": "^2.1.2",
     "prettier-config-standard": "^1.0.1",
-    "eslint": "^4.19.1",
     "eslint-config-airbnb-base": "^12.1.0",
     "eslint-plugin-import": "^2.9.0"
   }
